lab_3/nohup.out
  File "monitoring.py", line 38
    while True:
    ^
IndentationError: unexpected indent
